# netbox-mcp

./: Dockerfile  README.md  docker-compose.yml  netbox_client.py  netbox_url.json  pyproject.toml  requirements.txt  server.py
