[project]
name = "netbox-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=0.3.23",
    "langchain-azure-ai>=0.1.2",
    "langchain-community>=0.3.21",
    "langchain-mcp-adapters>=0.0.7",
    "langchain-ollama>=0.3.1",
    "langchain-openai>=0.3.12",
    "langgraph>=0.3.25",
    "mcp[cli]>=1.6.0",
    "nest-asyncio>=1.6.0",
    "ollama>=0.4.7",
    "openai>=1.71.0",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
]
